@@ -34,7 +34,6 @@
     		<version>6.0.0</version>
 	</dependency>
 	
-  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -42,4 +41,47 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+    <build>
+<plugins>
+
+     <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.7.0</version>
+          <configuration>
+            <fork>true</fork>
+            <executable>/System/Library/Frameworks/JavaVM.framework/Versions/Current/Commands/java</executable>
+            <source>9.0.4</source>
+            <target>9.0.4</target>
+          </configuration>
+        </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+          <parallel>tests</parallel>
+          <threadCount>2</threadCount>
+        </configuration>
+      </plugin>
+ 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+          <parallel>tests</parallel>
+          <forkMode>perthread</forkMode>
+          <threadCount>2</threadCount>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <includes>
+          <include>**/*Cases.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+
+      
+</plugins>
+    </build>
 </project>
